Fixed Unusual Footer Spacing
Added overflow:hidden to stop the footer from creating an invisible
margin at the bottom of the page.

Stops line height from overflowing and creating that margin.

--- a/stylesheets/fl-styles.css
+++ b/stylesheets/fl-styles.css
@@ -183,6 +183,7 @@ a.fl-button[data-role="red-underline"]:hover {
 	color:#e1e1e1;
 	width:100%;
 	height:50px;
+	overflow:hidden;
 	line-height:50px;
 }
 
